--- a/index.html
+++ b/index.html
@@ -48,10 +48,10 @@
   </div>
   <div class="box code" id="goto-down">
   <xmp >
-  <script type="text/javascript" src="//services.brid.tv/player/build/brid.min.js"></script>
-  <div id="Brid_39896876" class="brid" style="width:16;height:9;" ></div>
+  <script type="text/javascript" src="http://demo.movingtech.srl/player/moving/moving.min.js"></script>
+  <div id="Mv_39896876" class="movingplayer" style="width:16;height:9;" ></div>
   <script type="text/javascript">
-    $bp("Brid_39896876", {"id":"14030","width":"16","height":"9","video":"288251"});
+    $mv("Mv_39896876", {"id":"14030","width":"16","height":"9","video":"288251"});
   </script>
   </xmp>
   </div>
