--- a/noplaylist.html
+++ b/noplaylist.html
@@ -47,10 +47,10 @@
   </div>
   <div class="box code" id="goto-down">
     <xmp >
-      <script type="text/javascript" src="//services.brid.tv/player/build/brid.min.js"></script>
-      <div id="Brid_39898605" class="brid" style="width:16;height:9;"></div>
+      <script type="text/javascript" src="http://demo.movingtech.srl/player/moving/moving.min.js"></script>
+      <div id="Mv_39898605" class="movingplayer" style="width:16;height:9;"></div>
       <script type="text/javascript">
-        $bp("Brid_39898605", {"id":"14775","width":"16","height":"9","video":"308851"});
+        $Mv("Mv_39898605", {"id":"14775","width":"16","height":"9","video":"308851"});
       </script>
     </xmp>
     </div>
