--- a/playlist.html
+++ b/playlist.html
@@ -47,10 +47,10 @@
     </div>
     <div class="box code" id="goto-down">
     <xmp >
-      <script type="text/javascript" src="//services.brid.tv/player/build/brid.min.js"></script>
-      <div id="Brid_39897338" class="brid" ></div>
+      <script type="text/javascript" src="http://demo.movingtech.srl/player/moving/moving.min.js"></script>
+      <div id="Mv_39897338" class="movingplayer" ></div>
       <script type="text/javascript">
-        $bp("Brid_39897338", {"id":"14801","width":"16","height":"9","playlist":{"id":"0","mode":"latest"},"video_type":"0"});
+        $Mv("Mv_39897338", {"id":"14801","width":"16","height":"9","playlist":{"id":"0","mode":"latest"},"video_type":"0"});
       </script>
     </xmp>
     </div>
