--- a/index.html
+++ b/index.html
@@ -32,6 +32,9 @@
         <a href="playlist.html">With Playlist</a>
       </li>
       <li>
+        <a href="playlistplus.html">With Playlist plus</a>
+      </li>
+      <li>
         <a href="noplaylist.html">Without Playlist</a>
       </li>
     </ul>
