--- a/playlistplus.html
+++ b/playlistplus.html
@@ -37,28 +37,34 @@
       <li>
         <a href="noplaylist.html">Without Playlist</a>
       </li>
+
     </ul>
   </div>
     <div>
       <div class="box">
-        <script type="text/javascript" src="//services.brid.tv/player/build/brid.min.js"></script> <div id="Brid_39898605" class="brid" style="width:16;height:9;" > </div> <script type="text/javascript"> $bp("Brid_39898605", {"id":"14775","width":"16","height":"9","video":"308851"}); </script>
+        <script type='text/javascript' src="//services.brid.tv/widget/brid.widget.min.js"></script>
+        <div id="widget_1539947995" class="widget-mot" style="width:600px;"></div>
+        <script>
+          $bWidgets.init({"id":"widget_1539947995","playerId":"14808","partnerId":"11825","playlistId":"5148","height":"500","mobileHeight":"100","color":"030000","playlistType":"0","autoplay":1,"shuffle":"0"});
+        </script>
+
+
     </div>
   </div>
   <div>
     <div class="box space">
-    <a href="#goto-down">Embed code in your site</a>
-  </div>
-  <div class="box code" id="goto-down">
+      <a href="#goto-down">Embed code in your site</a>
+    </div>
+    <div class="box code" id="goto-down">
     <xmp >
-      <script type="text/javascript" src="http://demo.movingtech.srl/player/moving/moving.min.js"></script>
-      <div id="Mv_39898605" class="movingplayer" style="width:16;height:9;"></div>
-      <script type="text/javascript">
-        $Mv("Mv_39898605", {"id":"14775","width":"16","height":"9","video":"308851"});
+      <script type='text/javascript' src="http://demo.movingtech.srl/player/moving/moving.min.js"></script>
+      <div id="Mv_1539947995" class="movingplayer"></div>
+      <script>
+        $vm.init({"id":"widget_1539947995","playerId":"14808","partnerId":"11825","playlistId":"5148","height":"400","mobileHeight":"400","color":"030000","playlistType":"0","autoplay":1,"shuffle":"0"});
       </script>
     </xmp>
     </div>
   </div>
-
     <div class="">
       <footer class="footer center-text">
         <p>Powered by
