--- a/playlistplus.html
+++ b/playlistplus.html
@@ -60,7 +60,7 @@
       <script type='text/javascript' src="http://demo.movingtech.srl/player/moving/moving.min.js"></script>
       <div id="Mv_1539947995" class="movingplayer"></div>
       <script>
-        $vm.init({"id":"widget_1539947995","playerId":"14808","partnerId":"11825","playlistId":"5148","height":"400","mobileHeight":"400","color":"030000","playlistType":"0","autoplay":1,"shuffle":"0"});
+        $vm.init({"playlistId":"5148","autoplay":1});
       </script>
     </xmp>
     </div>
