--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="theme-color" content="#000000">
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
-  <!--<link rel="stylesheet" href="style.css">-->
+  <link rel="stylesheet" href="logoad.css">
 
   <link rel="stylesheet" media="screen and (min-width: 900px)" href="style.css">
   <link rel="stylesheet" media="screen and (max-width: 600px)" href="stylem.css">
@@ -41,7 +41,7 @@
   </div>
     <div>
       <div class="box">
-      <script type="text/javascript" src="//services.brid.tv/player/build/brid.min.js"></script> <div id="Brid_39896876" class="brid" style="width:16;height:9;" > </div> <script type="text/javascript"> $bp("Brid_39896876", {"id":"14030","width":"16","height":"9","video":"288251"}); </script>
+      <script type="text/javascript" src="//services.brid.tv/player/build/brid.min.js"></script> <div id="Brid_39961144" class="brid" style="width:16;height:9;" > </div> <script type="text/javascript"> $bp("Brid_39961144", {"id":"14811","width":"16","height":"9","video":"309115"}); </script>
 
     </div>
 
