--- a/noplaylist.html
+++ b/noplaylist.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="theme-color" content="#000000">
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
-  <!--<link rel="stylesheet" href="style.css">-->
+  <link rel="stylesheet" href="logoad.css">
 
   <link rel="stylesheet" media="screen and (min-width: 900px)" href="style.css">
   <link rel="stylesheet" media="screen and (max-width: 600px)" href="stylem.css">
